--- a/browser-extension-chrome/popup.html
+++ b/browser-extension-chrome/popup.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
+<!doctype html>
 <html>
 <head>
   <link rel="stylesheet" href="css/font-awesome.min.css">
