--- a/Artivity.Extension.Chromium/popup.html
+++ b/Artivity.Extension.Chromium/popup.html
@@ -24,6 +24,8 @@
   <div id="footer">
     Copyright &copy; 2015, University of the Arts, London
   </div>
+    
+  <div id="debug"></div>
 
   <script src="popup.js" type="text/javascript"></script>
 </body>
