Initial implementation for ORCID accounts.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700,100,500' type='text/css'>
-
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/bootstrap-colorpicker.min.css">
@@ -19,6 +18,7 @@
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.min.js"></script>
 	<script src="js/angular-input-modified.js"></script>
+    <script src="js/angular-ui.min.js"></script>
 	<script src="js/base64.js"></script>
 	<script src="js/d3.min.js"></script>
 	<script src="js/d3-gantt.js"></script>
