Added local Roboto font resources.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700,100,500' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/bootstrap-colorpicker.min.css">
+	<link rel='stylesheet' href='css/roboto.css' type='text/css'>
 	<link rel="stylesheet" href="css/material-design-iconic-font.min.css" />
 	<link rel="stylesheet" href="css/style.css">
 
