added debug configuration to journal.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/material-design-iconic-font.min.css" />
 	<link rel="stylesheet" href="css/style.css">
 
+	<script src="js/conf.js"></script>
 	<script src="js/jquery-2.2.2.min.js"></script>
 	<script src="js/moment.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
