--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -20,6 +20,8 @@
 	<script src="js/angular-route.min.js"></script>
 	<script src="js/angular-input-modified.js"></script>
     <script src="js/angular-ui.min.js"></script>
+    <script src="js/quantize.js"></script>
+    <script src="js/color-thief.min.js"></script>
 	<script src="js/base64.js"></script>
 	<script src="js/d3.min.js"></script>
 	<script src="js/d3-gantt.js"></script>
