Implemented GUI plugin preferences.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -2,13 +2,15 @@
 <html ng-app="explorerApp">
 
 <head>
-	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/bootstrap-colorpicker.min.css">
+	<link rel="stylesheet" href="css/bootstrap-switch.min.css">
+	<link ref="stylesheet" href="css/ui-grid.min.css">
 	<link rel='stylesheet' href='css/roboto.css' type='text/css'>
-	<link rel="stylesheet" href="css/material-design-iconic-font.min.css" />
+	<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
 	<script src="js/conf.js"></script>
@@ -16,12 +18,14 @@
 	<script src="js/moment.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/bootstrap-colorpicker.min.js"></script>
+	<script src="js/bootstrap-switch.min.js"></script>
 	<script src="js/angular.min.js"></script>
 	<script src="js/angular-route.min.js"></script>
 	<script src="js/angular-input-modified.js"></script>
-    <script src="js/angular-ui.min.js"></script>
-    <script src="js/quantize.js"></script>
-    <script src="js/color-thief.js"></script>
+	<script src="js/angular-ui.min.js"></script>
+	<script src="js/ui-grid.min.js"></script>
+	<script src="js/quantize.js"></script>
+	<script src="js/color-thief.js"></script>
 	<script src="js/base64.js"></script>
 	<script src="js/d3.min.js"></script>
 	<script src="js/d3-gantt.js"></script>
@@ -33,5 +37,5 @@
 <body>
 	<div ng-view></div>
 </body>
-	
+
 </html>
