--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -13,25 +13,26 @@
 	<link rel="stylesheet" href="css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	<script src="js/conf.js"></script>
-	<script src="js/jquery-2.2.2.min.js"></script>
-	<script src="js/moment.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/bootstrap-colorpicker.min.js"></script>
-	<script src="js/bootstrap-switch.min.js"></script>
-	<script src="js/angular.min.js"></script>
-	<script src="js/angular-route.min.js"></script>
-	<script src="js/angular-input-modified.js"></script>
-	<script src="js/angular-ui.min.js"></script>
-	<script src="js/ui-grid.min.js"></script>
-	<script src="js/quantize.js"></script>
-	<script src="js/color-thief.js"></script>
-	<script src="js/base64.js"></script>
-	<script src="js/d3.min.js"></script>
-	<script src="js/d3-gantt.js"></script>
+	<script src="js/lib/jquery-2.2.2.min.js"></script>
+	<script src="js/lib/moment.min.js"></script>
+	<script src="js/lib/bootstrap.min.js"></script>
+	<script src="js/lib/bootstrap-colorpicker.min.js"></script>
+	<script src="js/lib/bootstrap-switch.min.js"></script>
+	<script src="js/lib/angular.min.js"></script>
+	<script src="js/lib/angular-route.min.js"></script>
+	<script src="js/lib/angular-input-modified.js"></script>
+	<script src="js/lib/angular-ui.min.js"></script>
+	<script src="js/lib/ui-grid.min.js"></script>
+	<script src="js/lib/quantize.js"></script>
+	<script src="js/lib/color-thief.js"></script>
+	<script src="js/lib/base64.js"></script>
+	<script src="js/lib/d3.min.js"></script>
+	<script src="js/lib/d3-gantt.js"></script>
 
+	<script src="js/app.conf.debug.js"></script>
 	<script src="js/app.js"></script>
-	<script src="js/controllers.js"></script>
+	<script src="js/app.classes.js"></script>
+	<script src="js/app.controllers.js"></script>
 </head>
 
 <body>
