--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -29,7 +29,7 @@
 	<script src="js/lib/d3.min.js"></script>
 	<script src="js/lib/d3-gantt.js"></script>
 
-	<script src="js/app.conf.debug.js"></script>
+	<script src="js/app.conf.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/app.classes.js"></script>
 	<script src="js/app.controllers.js"></script>
