Set port in Chromium extension to release.

--- a/Artivity.Agent.Chromium/popup.html
+++ b/Artivity.Agent.Chromium/popup.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div id="warning-box">
-			<i class="zmdi zmdi-hc-fw"></i> Cannot connect with local Artivity service.
+			<i class="zmdi zmdi-info-outline"></i> Cannot connect with local Artivity service.
 		</div>
 	</div>
 
