Started translating the labels in the journal.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -20,6 +20,7 @@
     <script src="bower_components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js"></script>
     <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/angular-input-modified/dist/angular-input-modified.min.js"></script>
     <script src="bower_components/angular-ui/build/angular-ui.min.js"></script>
@@ -35,6 +36,7 @@
     <script src="js/app.classes.js"></script>
     <script src="js/app.controllers.js"></script>
     <script src="js/app.overlay.js"></script>
+    <script src="js/app.translation.js"></script>
 </head>
 
 <body>
