Implementing new timeline. Bugfix: Influences are now returned in a iterable format by APID.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -30,6 +30,7 @@
     <script src="bower_components/d3/d3.min.js"></script>
     <script src="js/lib/quantize.js"></script>
     <script src="js/lib/d3-gantt.js"></script>
+	<script src="js/lib/d3-timeline.js"></script>
 
     <script src="js/app.conf.js"></script>
     <script src="js/app.js"></script>
