Implemented timeline control in Artivity journal.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="css/style.css">
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+	<script src="bower_components/jquery-ui/ui/widgets/draggable.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/moment-duration-format/lib/moment-duration-format.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js"></script>
     <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
