Added avatar icon to comments.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" href="bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css">
 	<link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css">
 
-
 	<link rel='stylesheet' href='css/roboto.css' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 
@@ -30,6 +29,7 @@
 	<script src="bower_components/angular-input-modified/dist/angular-input-modified.min.js"></script>
 	<script src="bower_components/angular-ui/build/angular-ui.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+	<script src="bower_components/angular-moment/angular-moment.min.js"></script>
 	<script src="bower_components/color-thief/dist/color-thief.min.js"></script>
 	<script src="bower_components/base64/base64.min.js"></script>
 	<script src="bower_components/d3/d3.min.js"></script>
