--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -33,7 +33,7 @@
 	<script src="bower_components/color-thief/dist/color-thief.min.js"></script>
 	<script src="bower_components/base64/base64.min.js"></script>
 	<script src="bower_components/d3/d3.min.js"></script>
-	<script src="bower_components/fullcalendar/dist/fullcalendar.js"></script>
+	<!--<script src="bower_components/fullcalendar/dist/fullcalendar.js"></script>-->
 	<script src="js/lib/quantize.js"></script>
 	<script src="js/lib/d3-timeline.js"></script>
 	<script src="js/lib/d3-chart-donut.js"></script>
