--- a/Artivity.Apid.Modules.Journal/app/query.html
+++ b/Artivity.Apid.Modules.Journal/app/query.html
@@ -25,6 +25,7 @@
 	<script src="bower_components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js"></script>
 	<script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
+	<script src="bower_components/angular-animate/angular-animate.min.js"></script>
 	<script src="bower_components/angular-translate/angular-translate.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/angular-input-modified/dist/angular-input-modified.min.js"></script>
