Minor bugfixes. Removed redundant font files. Moved calendar modal into template file.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -9,10 +9,7 @@
 	<link rel="stylesheet" href="bower_components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css">
 	<link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css">
 	<link rel="stylesheet" href="bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css">
-	<link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css">
-	<link rel='stylesheet' href='bower_components/yasgui/dist/yasgui.min.css' type='text/css'/>
-	
-	<link rel='stylesheet' href='css/roboto.css' type='text/css'>
+	<link rel='stylesheet' href='bower_components/font-roboto/dist/styles/roboto.min.css' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -34,7 +31,6 @@
 	<script src="bower_components/angular-moment/angular-moment.min.js"></script>
 	<script src="bower_components/base64/base64.min.js"></script>
 	<script src="bower_components/d3/d3.min.js"></script>
-	<script src='bower_components/yasgui/dist/yasgui.min.js'></script>
 	<script src="js/lib/quantize.js"></script>
 	<script src="js/lib/d3-timeline.js"></script>
 	
