Implemented thumbnails in file list.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -36,6 +36,7 @@
 	
 	<script src="js/app.conf.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/app.api.js"></script>
 	<script src="js/app.classes.js"></script>
 	<script src="js/app.controllers.js"></script>
 	<script src="js/app.overlay.js"></script>
