--- a/Artivity.Apid.Modules.Journal/app/query.html
+++ b/Artivity.Apid.Modules.Journal/app/query.html
@@ -9,10 +9,8 @@
 	<link rel="stylesheet" href="bower_components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css">
 	<link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css">
 	<link rel="stylesheet" href="bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css">
-	<link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css">
+	<link rel='stylesheet' href='bower_components/font-roboto/dist/styles/roboto.min.css' type='text/css'>
 	<link rel='stylesheet' href='bower_components/yasgui/dist/yasgui.min.css' type='text/css' />
-
-	<link rel='stylesheet' href='css/roboto.css' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -40,6 +38,7 @@
 
 	<script src="js/app.conf.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/app.api.js"></script>
 	<script src="js/app.classes.js"></script>
 	<script src="js/app.controllers.js"></script>
 	<script src="js/app.overlay.js"></script>
