--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css">
 	<link rel="stylesheet" href="bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css">
 	<link rel='stylesheet' href='bower_components/font-roboto/dist/styles/roboto.min.css' type='text/css'>
+	<link rel='stylesheet' href='bower_components/angular-hotkeys/build/hotkeys.min.css' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -25,6 +26,7 @@
 	<script src="bower_components/angular-animate/angular-animate.min.js"></script>
 	<script src="bower_components/angular-translate/angular-translate.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
+	<script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
 	<script src="bower_components/angular-input-modified/dist/angular-input-modified.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	<script src="bower_components/angular-ui/build/angular-ui.min.js"></script>
@@ -33,7 +35,7 @@
 	<script src="bower_components/d3/d3.min.js"></script>
 	<script src="js/lib/quantize.js"></script>
 	<script src="js/lib/d3-timeline.js"></script>
-	
+
 	<script src="js/app.conf.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/app.api.js"></script>
@@ -44,6 +46,8 @@
 </head>
 
 <body>
+	<div ng-controller="KeyboardController"></div>
+	
 	<div ng-view></div>
 
 	<div class="overlay collapse" id="overlay">
