--- a/Artivity.Apid.Modules.Journal/app/query.html
+++ b/Artivity.Apid.Modules.Journal/app/query.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css">
 	<link rel="stylesheet" href="bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css">
 	<link rel='stylesheet' href='bower_components/font-roboto/dist/styles/roboto.min.css' type='text/css'>
+	<link rel='stylesheet' href='bower_components/angular-hotkeys/build/hotkeys.min.css' type='text/css'>
 	<link rel='stylesheet' href='bower_components/yasgui/dist/yasgui.min.css' type='text/css' />
 	<link rel="stylesheet" href="css/style.css">
 
@@ -26,6 +27,7 @@
 	<script src="bower_components/angular-animate/angular-animate.min.js"></script>
 	<script src="bower_components/angular-translate/angular-translate.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
+	<script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
 	<script src="bower_components/angular-input-modified/dist/angular-input-modified.min.js"></script>
 	<script src="bower_components/angular-ui/build/angular-ui.min.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
@@ -46,6 +48,8 @@
 </head>
 
 <body>
+	<div ng-controller="KeyboardController"></div>
+	
 	<div>
 		<div id="header">
 			<div class="row">
