added task to remove electron relevant scripts for macOS build.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -18,8 +18,10 @@
 
 	<link rel="stylesheet" href="css/style.css">
 
+	<!-- comments:comment-block html -->
 	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-
+	<!-- endcomments -->
+	
 	<!-- bower:js -->
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/jquery-ui/jquery-ui.js"></script>
@@ -49,7 +51,7 @@
 	<script src="js/lib/quantize.js"></script>
 	<script src="js/lib/d3-timeline.js"></script>
 
-	<script src="js/dragDrop.js"></script>
+
 	<script src="js/app.conf.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/app.api.js"></script>
@@ -57,13 +59,21 @@
 	<script src="js/app.controllers.js"></script>
 	<script src="js/app.overlay.js"></script>
 	<script src="js/app.translation.js"></script>
+
+	<!-- comments:comment-block html -->
 	<script src="js/controller/load.controler.js"></script>
+	<script src="js/host/dragDropHandler.js"></script>
+	<script src="js/host/framelessWindow.js"></script>
+	<script src="js/host/updateChecker.js"></script>
+	
+	
 
 	<script>
 	if (window.module) module = window.module;
 
 	
 	</script>
+	<!-- endcomments -->
 </head>
 
 <body>
