Refactored controllers, views and directires in Journal.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -55,7 +55,15 @@
 	<script src="js/app.controllers.js"></script>
 	<script src="js/app.overlay.js"></script>
 	<script src="js/app.translation.js"></script>
-	<script src="js/controller/load.controler.js"></script>
+
+	<script src="partials/start.controller.js"></script>
+	<script src="partials/settings.controller.js"></script>
+	<script src="partials/file-list.controller.js"></script>
+	<script src="partials/file-view.controller.js"></script>
+
+	<script src="partials/directives/art-settings-user.js"></script>
+	<script src="partials/directives/art-settings-accounts.js"></script>
+	<script src="partials/directives/art-settings-apps.js"></script>
 
 	<script>
 	if (window.module) module = window.module;
