Modularized app.controllers.js

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -45,7 +45,6 @@
 	<!-- endbower -->
 
 	<script src="js/lib/quantize.js"></script>
-	<script src="js/lib/d3-timeline.js"></script>
 
 	<script src="js/dragDrop.js"></script>
 	<script src="js/app.conf.js"></script>
@@ -61,9 +60,22 @@
 	<script src="partials/file-list.controller.js"></script>
 	<script src="partials/file-view.controller.js"></script>
 
+	<script src="partials/directives/art-calendar.js"></script>
+	<script src="partials/directives/art-color-picker.js"></script>
+	<script src="partials/directives/art-photo-picker.js"></script>
 	<script src="partials/directives/art-settings-user.js"></script>
 	<script src="partials/directives/art-settings-accounts.js"></script>
 	<script src="partials/directives/art-settings-apps.js"></script>
+	<script src="partials/directives/art-style-binder.js"></script>
+	<script src="partials/directives/art-timeline.js"></script>
+	<script src="partials/directives/bs-switch.js"></script>
+	<script src="partials/directives/ng-dropzone.js"></script>
+	<script src="partials/directives/ng-enter.js"></script>
+	<script src="partials/directives/ng-esc.js"></script>
+
+	<script src="partials/dialogs/add-account-dialog.controller.js"></script>
+	<script src="partials/dialogs/calendar-dialog.controller.js"></script>
+	<script src="partials/dialogs/publish-file-dialog.controller.js"></script>
 
 	<script>
 	if (window.module) module = window.module;
