Implementing first time setup.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -44,11 +44,10 @@
 	<script src="bower_components/angular-translate/angular-translate.js"></script>
 	<!-- endbower -->
 
-	<script src="js/dragDrop.js"></script>
+	<script src="js/app.window.js"></script>
 	<script src="js/app.conf.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/app.api.js"></script>
-	<script src="js/app.overlay.js"></script>
 	<script src="js/app.translation.js"></script>
 	<script src="js/app.src.js"></script>
 
