Implemented initial first-time user setup. Grunt is writing scripts into index.html dynamically for improved debugging.

--- a/Artivity.Apid.Modules.Journal/app/index.html
+++ b/Artivity.Apid.Modules.Journal/app/index.html
@@ -46,10 +46,54 @@
 
 	<script src="js/app.window.js"></script>
 	<script src="js/app.conf.js"></script>
-	<script src="js/app.js"></script>
+	<script src="js/app.route.js"></script>
 	<script src="js/app.api.js"></script>
 	<script src="js/app.translation.js"></script>
 	<script src="js/app.src.js"></script>
+
+	<!-- start auto template tags -->
+	<script type="text/javascript" src="js/lib/extensions.js"></script>
+	<script type="text/javascript" src="js/lib/functions.js"></script>
+	<script type="text/javascript" src="js/lib/livereload.js"></script>
+	<script type="text/javascript" src="js/lib/overlay.js"></script>
+	<script type="text/javascript" src="js/lib/quantize.js"></script>
+	<script type="text/javascript" src="js/lib/classes/canvas-cache.js"></script>
+	<script type="text/javascript" src="js/lib/classes/document-renderer-cache.js"></script>
+	<script type="text/javascript" src="js/lib/classes/document-renderer.js"></script>
+	<script type="text/javascript" src="js/lib/classes/editing-statistics.js"></script>
+	<script type="text/javascript" src="js/lib/classes/entity-cache.js"></script>
+	<script type="text/javascript" src="js/lib/classes/entity.js"></script>
+	<script type="text/javascript" src="js/lib/classes/heatmap-renderer.js"></script>
+	<script type="text/javascript" src="js/lib/classes/layer-cache.js"></script>
+	<script type="text/javascript" src="js/lib/classes/layer-tree-node.js"></script>
+	<script type="text/javascript" src="js/lib/classes/layer-tree.js"></script>
+	<script type="text/javascript" src="js/lib/classes/layer.js"></script>
+	<script type="text/javascript" src="js/lib/filters/reverse.js"></script>
+	<script type="text/javascript" src="js/lib/services/client-service.js"></script>
+	<script type="text/javascript" src="js/lib/services/file-service.js"></script>
+	<script type="text/javascript" src="js/lib/services/settings-service.js"></script>
+	<script type="text/javascript" src="partials/directives/art-calendar.js"></script>
+	<script type="text/javascript" src="partials/directives/art-color-picker.js"></script>
+	<script type="text/javascript" src="partials/directives/art-keyboard-input-handler.js"></script>
+	<script type="text/javascript" src="partials/directives/art-photo-picker.js"></script>
+	<script type="text/javascript" src="partials/directives/art-settings-accounts.js"></script>
+	<script type="text/javascript" src="partials/directives/art-settings-apps.js"></script>
+	<script type="text/javascript" src="partials/directives/art-settings-user.js"></script>
+	<script type="text/javascript" src="partials/directives/art-style-binder.js"></script>
+	<script type="text/javascript" src="partials/directives/art-timeline.js"></script>
+	<script type="text/javascript" src="partials/directives/bs-switch.js"></script>
+	<script type="text/javascript" src="partials/directives/ng-dropzone.js"></script>
+	<script type="text/javascript" src="partials/directives/ng-enter.js"></script>
+	<script type="text/javascript" src="partials/directives/ng-esc.js"></script>
+	<script type="text/javascript" src="partials/dialogs/add-account-dialog.controller.js"></script>
+	<script type="text/javascript" src="partials/dialogs/calendar-dialog.controller.js"></script>
+	<script type="text/javascript" src="partials/dialogs/publish-file-dialog.controller.js"></script>
+	<script type="text/javascript" src="partials/file-list.controller.js"></script>
+	<script type="text/javascript" src="partials/file-view.controller.js"></script>
+	<script type="text/javascript" src="partials/settings.controller.js"></script>
+	<script type="text/javascript" src="partials/setup.controller.js"></script>
+	<script type="text/javascript" src="partials/start.controller.js"></script>
+	<!-- end auto template tags -->
 
 	<script>
 	if (window.module) module = window.module;
